force-app/main/default/objects/pse__Permission_Control__c/pse__Permission_Control__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__PermissionControlHelp</customHelpPage>
    <description>Grants a set of stand-alone or cascading permissions to a single Salesforce user, with reference to either a resource, region, practice, group, or project. Controls whether the user can carry out specific processes including: logging time on behalf of other resources, entering expenses, staffing, and viewing and editing projects in Project Task Gantt and Gantt.</description>
    <label>Permission Control</label>
    <nameField>
        <displayFormat>PC-{0}</displayFormat>
        <label>Permission Control Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permission Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>