force-app/main/default/objects/pse__Permission_Control__c/fields/pse__Cascading_Permission__c.field-meta.xml
<CustomField>
    <fullName>pse__Cascading_Permission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box for Permission Controls associated with a hierarchy (e.g. Region, Practice, or Group) means that the Permission also applies to (Resources belonging to) all nodes lower in the hierarchy, in addition to the specified node.</description>
    <inlineHelpText>Checking this box for Permission Controls associated with a hierarchy (e.g. Region, Practice, or Group) means that the Permission also applies to (Resources belonging to) all nodes lower in the hierarchy, in addition to the specified node.</inlineHelpText>
    <label>Cascading Permission</label>
    <type>Checkbox</type>
</CustomField>