force-app/main/default/objects/pse__Permission_Control__c/fields/pse__Delete_Project_Version__c.field-meta.xml
<CustomField>
    <fullName>pse__Delete_Project_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Grants permission to the user to delete Project Versions.</description>
    <inlineHelpText>Grants permission to the user to delete Project Versions.</inlineHelpText>
    <label>Project Version Delete</label>
    <type>Checkbox</type>
</CustomField>