force-app/main/default/objects/pse__Permission_Control__c/fields/pse__Expense_Entry__c.field-meta.xml
<CustomField>
    <fullName>pse__Expense_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox governs the User&apos;s ability to enter/edit Expenses and Expense Reports for Resources other than their own.</description>
    <inlineHelpText>This checkbox governs the User&apos;s ability to enter/edit Expenses and Expense Reports for Resources other than their own.</inlineHelpText>
    <label>Expense Entry</label>
    <type>Checkbox</type>
</CustomField>