force-app/main/default/objects/pse__Permission_Control__c/fields/pse__Forecast_Edit__c.field-meta.xml
<CustomField>
    <fullName>pse__Forecast_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allowed to perform editing on the Forecasts page for the Region/Practice/Group</inlineHelpText>
    <label>Forecast Edit</label>
    <type>Checkbox</type>
</CustomField>