force-app/main/default/objects/pse__Permission_Control__c/fields/pse__Forecast_View__c.field-meta.xml
<CustomField>
    <fullName>pse__Forecast_View__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allowed to view the Forecasts page for the Region/Practice/Group</inlineHelpText>
    <label>Forecast View</label>
    <type>Checkbox</type>
</CustomField>