force-app/main/default/objects/pse__Permission_Control__c/fields/pse__Practice__c.field-meta.xml
<CustomField>
    <fullName>pse__Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Practice containing Resources that are the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of Resources in this Practice.</description>
    <inlineHelpText>This is the Practice containing Resources that are the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of Resources in this Practice.</inlineHelpText>
    <label>Practice</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipLabel>Permission Controls</relationshipLabel>
    <relationshipName>Permission_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>