force-app/main/default/objects/pse__Permission_Control__c/fields/pse__Region__c.field-meta.xml
<CustomField>
    <fullName>pse__Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Region containing Resources that are the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of Resources in this Region.</description>
    <inlineHelpText>This is the Region containing Resources that are the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of Resources in this Region.</inlineHelpText>
    <label>Region</label>
    <referenceTo>pse__Region__c</referenceTo>
    <relationshipLabel>Permission Controls</relationshipLabel>
    <relationshipName>Permission_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>