force-app/main/default/objects/pse__Permission_Control__c/fields/pse__Skills_And_Certifications_Entry__c.field-meta.xml
<CustomField>
    <fullName>pse__Skills_And_Certifications_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox governs the User&apos;s ability to enter/edit Skills and Certifications for Resources other than their own.</description>
    <label>Skills And Certifications Entry</label>
    <type>Checkbox</type>
</CustomField>