force-app/main/default/objects/pse__Permission_Control__c/fields/pse__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>