force-app/main/default/objects/pse__Permission_Control__c/fields/pse__Team__c.field-meta.xml
<CustomField>
    <fullName>pse__Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Team that is the target of the specified action(s) – e.g. Team View on behalf of this User.</description>
    <inlineHelpText>This is the Team that is the target of the specified action(s) – e.g. Team View on behalf of this User.</inlineHelpText>
    <label>Team</label>
    <referenceTo>pse__Team__c</referenceTo>
    <relationshipLabel>Permission Controls</relationshipLabel>
    <relationshipName>Permission_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>