force-app/main/default/objects/pse__Permission_Control__c/fields/pse__Team_View__c.field-meta.xml
<CustomField>
    <fullName>pse__Team_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Grants permission for the user to view the indicated team in read-only mode if the user is not the team owner.</description>
    <inlineHelpText>Grants permission for the user to view the indicated team in read-only mode if the user is not the team owner.</inlineHelpText>
    <label>Team View</label>
    <type>Checkbox</type>
</CustomField>