force-app/main/default/objects/pse__Permission_Control__c/fields/pse__Timecard_Ops_Edit__c.field-meta.xml
<CustomField>
    <fullName>pse__Timecard_Ops_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox governs the User&apos;s ability to edit Timecards for Resources after they have been approved but before they have been billed.</description>
    <inlineHelpText>This checkbox governs the User&apos;s ability to edit Timecards for Resources after they have been approved but before they have been billed.</inlineHelpText>
    <label>Timecard Ops Edit</label>
    <type>Checkbox</type>
</CustomField>