force-app/main/default/objects/pse__Permission_Control__c/fields/pse__View_Task_Manager__c.field-meta.xml
<CustomField>
    <fullName>pse__View_Task_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether the selected user can use Project Task Gantt in read-only mode if they are not the project manager of the selected project.</inlineHelpText>
    <label>Project Task Gantt View</label>
    <type>Checkbox</type>
</CustomField>