force-app/main/default/objects/pse__Permission_Control__c/fields/Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>Resource_Role__c</fullName>
    <label>Resource Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Resource_Roles</valueSetName>
    </valueSet>
</CustomField>