force-app/main/default/objects/pse__Permission_Control__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__User__c</columns>
    <columns>pse__Cascading_Permission__c</columns>
    <columns>pse__Resource_Request_Entry__c</columns>
    <columns>pse__Staffing__c</columns>
    <columns>pse__Timecard_Entry__c</columns>
    <columns>pse__Expense_Entry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>